# website-extensions

./: .gitignore  .gitlab-ci.yml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  README.md  instagram_profiles  pyproject.toml  tiktok_profiles  usernames_to_scrape
.github/workflows/: badges.yml  scrape.yml
scraper/: pyproject.toml
scraper/app/: badges.py  datafile.py  main.py  quota.py  state.py
scraper/app/services/: social.py
