[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.13,<3.14"
dependencies = ["curl-cffi~=0.15", "lxml~=6.1"]

[project.scripts]
scrape = "app.main:main"

[dependency-groups]
dev = ["ruff~=0.2", "ty~=0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]
